change project name and adding comment

--- a/main.html
+++ b/main.html
@@ -1,4 +1,4 @@
-﻿
+﻿<! --  main page  !>
       <!-- Jumbotron -->
       <div class="jumbotron">
           <div class="row">
@@ -13,7 +13,7 @@
           </div>
       </div>
 
-      <!-- Example row of columns -->
+      <!-- adding list of service to page -->
       <div class="row">
         <div ng-repeat="service in services">
         <div class="col-md-4">
